--- a/index.html
+++ b/index.html
@@ -103,23 +103,28 @@
                     <h6 class="texto"><em>Estudiante de Ingeniería de Sistemas de Información.</em></h6>
                 </article>
                 <article class="cuadro_integrante">
-                    <img alt="Foto de Jeremy Alcala" src="./public/assets/imagenes/luis.PNG" class="imagen_nosotros">
-                    <h4 class="nosotros__nombre">Luis Alvarez Ticona</h4>
+                    <img alt="Foto de Pricila Lucero" src="./public/assets/imagenes/pricila.PNG" class="imagen_nosotros">
+                    <h4 class="nosotros__nombre">Pricila Lucero Lucero</h4>
                     <h6 class="texto"><em>Estudiante de Ingeniería de Sistemas de Información.</em></h6>
                 </article>
                 <article class="cuadro_integrante">
-                    <img alt="Foto de Jeremy Alcala" src="./public/assets/imagenes/barja.PNG" class="imagen_nosotros">
+                    <img alt="Foto de Luis Barja" src="./public/assets/imagenes/barja.PNG" class="imagen_nosotros">
                     <h4 class="nosotros__nombre">Luis Barja Estrada</h4>
                     <h6 class="texto"><em>Estudiante de Ingeniería de Sistemas de Información.</em></h6>
                 </article>
                 <article class="cuadro_integrante">
-                    <img alt="Foto de Jeremy Alcala" src="./public/assets/imagenes/casaverde.PNG" class="imagen_nosotros">
-                    <h4 class="nosotros__nombre">Diego Casaverde Centeno</h4>
+                    <img alt="Foto de Angel Sosa" src="./public/assets/imagenes/Angel.jpg" class="imagen_nosotros">
+                    <h4 class="nosotros__nombre">Angel Sosa Ostos</h4>
                     <h6 class="texto"><em>Estudiante de Ingeniería de Sistemas de Información.</em></h6>
                 </article>
                 <article class="cuadro_integrante">
-                    <img alt="Foto de Jeremy Alcala" src="./public/assets/imagenes/pricila.PNG" class="imagen_nosotros">
-                    <h4 class="nosotros__nombre">Pricila Lucero Lucero</h4>
+                    <img alt="Foto de Mauricio Tuesta" src="./public/assets/imagenes/Mauricio.jpg" class="imagen_nosotros">
+                    <h4 class="nosotros__nombre">Mauricio Tuesta Veliz</h4>
+                    <h6 class="texto"><em>Estudiante de Ingeniería de Sistemas de Información.</em></h6>
+                </article>
+                <article class="cuadro_integrante">
+                    <img alt="Foto de Rafael Fuentes" src="./public/assets/imagenes/nicolas.jpg" class="imagen_nosotros">
+                    <h4 class="nosotros__nombre">Rafael Fuentes Ibarra</h4>
                     <h6 class="texto"><em>Estudiante de Ingeniería de Sistemas de Información.</em></h6>
                 </article>
             </div>
@@ -186,8 +191,8 @@
                 <a class="footlink">POLITICAS DE PRIVACIDAD</a>
             </div>
             <div class="media">
-                <a><img class="social-icon" src="./public/assets/imagenes/facebook.svg" alt="Facebook"></a>
-                <a><img class="social-icon" src="./public/assets/imagenes/instagrama.svg" alt="Instagram"></a>
+                <a href="https://www.facebook.com/" target="_blank"><img class="social-icon" src="./public/assets/imagenes/facebook.svg" alt="Facebook"></a>
+                <a href="https://www.instagram.com/" target="_blank"><img class="social-icon" src="./public/assets/imagenes/instagrama.svg" alt="Instagram"></a>
             </div>
         </div>
     </div>
