--- a/registroDueño.html
+++ b/registroDueño.html
@@ -30,8 +30,12 @@
                 <form>
                     <div class="form-row mb-2">
                         <div class="form-group col-md-6">
-                            <label class="font-weight-bold">Usuario<span class="text-danger">*</span></label>
-                            <input type="text" class="form-control" placeholder="Tu nombre de usuario">
+                            <label class="font-weight-bold">Nombre del dueño<span class="text-danger">*</span></label>
+                            <input type="text" class="form-control" placeholder="Ingrese el nombre del dueño">
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label class="font-weight-bold">Apellidos del dueño<span class="text-danger">*</span></label>
+                            <input type="text" class="form-control" placeholder="Ingrese los apellidos del dueño">
                         </div>
                         <div class="form-group col-md-6">
                             <label class="font-weight-bold">Nombre del establecimiento<span class="text-danger">*</span></label>
@@ -42,8 +46,12 @@
                             <input type="text" class="form-control" placeholder="Ingrese nombre del establecimiento">
                         </div>
                         <div class="form-group col-md-6">
+                            <label class="font-weight-bold">Correo electrónico del establecimiento<span class="text-danger">*</span></label>
+                            <input type="email" class="form-control" placeholder="Ingrese el correo electrónico">
+                        </div>
+                        <div class="form-group col-md-6">
                             <label class="font-weight-bold">RUC<span class="text-danger">*</span></label>
-                            <input type="text" class="form-control" placeholder="Ingrese su número RUC">
+                            <input type="number" class="form-control" placeholder="Ingrese su número RUC">
                         </div>
                     </div>
                     <div class="form-group mb-3">
