--- a/registroComprador.html
+++ b/registroComprador.html
@@ -30,9 +30,29 @@
                     <form>
                         <div class="form-row mb-2">
                             <div class="form-group col-md-6">
-                                <label class="font-weight-bold">Usuario<span class="text-danger">*</span></label>
-                                <input type="text" class="form-control" placeholder="Tu nombre de usuario">
+                                <label class="font-weight-bold">DNI<span class="text-danger">*</span></label>
+                                <input type="number" class="form-control" placeholder="Ingresa tu número de DNI">
                             </div>
+                            <div class="form-group col-md-6">
+                                <label class="font-weight-bold">Nombre<span class="text-danger">*</span></label>
+                                <input type="text" class="form-control" placeholder="Ingresa tu nombre">
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label class="font-weight-bold">Apellido Paterno<span class="text-danger">*</span></label>
+                                <input type="text" class="form-control" placeholder="Ingresa tus apellido paterno">
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label class="font-weight-bold">Apellido Materno<span class="text-danger">*</span></label>
+                                <input type="text" class="form-control" placeholder="Ingresa tus apellido materno">
+                            </div>
+                        </div>
+                        <div class="form-group mb-3">
+                            <label class="font-weight-bold">Correo electrónico<span class="text-danger">*</span></label>
+                            <input type="email" class="form-control" placeholder="Ingresa tu correo electrónico">
+                        </div>
+                        <div class="form-group mb-3">
+                            <label class="font-weight-bold">Número de celular<span class="text-danger">*</span></label>
+                            <input type="number" class="form-control" placeholder="Ingresa tu número de celular">
                         </div>
                         <div class="form-group mb-3">
                             <label class="font-weight-bold">Contraseña<span class="text-danger">*</span></label>
